블러된 컨텐츠 실시간 감시 및 정상화

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,14 @@
 {
-    "manifest_version": 3,
-    "name": "Ban Blur",
-    "version": "0.1.0",
-    "description": "Remove comment blur from ArcaLive",
-    "permissions": ["activeTab"],
-    "action": {
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://arca.live/*"],
-        "js": ["script.js"],
-        "run_at": "document_idle"
-      }
-    ]
-  }
-  
+  "manifest_version": 3,
+  "name": "Ban Blur",
+  "version": "0.1.1",
+  "description": "아카라이브에서 로그인 없이 블러된 컨텐츠 확인 가능하도록 해주는 확장",
+  "permissions": ["activeTab"],
+  "content_scripts": [
+    {
+      "matches": ["https://arca.live/*"],
+      "js": ["script.js"],
+      "run_at": "document_idle"
+    }
+  ]
+}
