--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,28 @@
 {
-  "manifest_version": 3,
-  "name": "Ban Blur",
-  "version": "0.1.2",
-  "description": "아카라이브에서 로그인 없이 블러된 컨텐츠들을 확인 가능하도록 해주는 확장 프로그램",
-  "content_scripts": [
-    {
-      "matches": ["https://arca.live/*"],
-      "js": ["script.js"],
-      "run_at": "document_start"
-    }
-  ]
+    "name": "Ban Blur",
+    "version": "0.1.3",
+    "manifest_version": 3,
+    "description": "아카라이브에서 로그인 없이 블러된 컨텐츠들을 확인 가능하도록 해주는 확장 프로그램",
+    "author": "Retosila",
+    "icons": {
+        "16": "icons/icon16.png",
+        "32": "icons/icon32.png",
+        "48": "icons/icon48.png",
+        "96": "icons/icon96.png",
+        "128": "icons/icon128.png"
+    },
+    "action": {
+        "default_title": "Ban Blur",
+        "default_icon": {
+            "19": "icons/icon19.png",
+            "38": "icons/icon38.png"
+        }
+    },
+    "content_scripts": [
+        {
+            "matches": ["https://arca.live/*"],
+            "js": ["script.js"],
+            "run_at": "document_start"
+        }
+    ]
 }
